--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 .DS_Store
 node_modules
 /dist
-/log
 
 # local env files
 .env.local
@@ -11,6 +10,7 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+*.log*
 
 # Editor directories and files
 .idea
