--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asn1crypto==1.1.0
 attrs==19.2.0
 Automat==0.7.0
+certifi==2019.9.11
 cffi==1.12.3
+chardet==3.0.4
 Click==7.0
 constantly==15.1.0
 cryptography==2.7
@@ -32,6 +34,7 @@ pyquery==1.4.1
 python-dateutil==2.8.1
 pytz==2019.3
 queuelib==1.5.0
+requests==2.22.0
 Scrapy==1.7.3
 service-identity==18.1.0
 six==1.12.0
@@ -39,6 +42,7 @@ SQLAlchemy==1.3.11
 sqlparse==0.3.0
 text-unidecode==1.3
 Twisted==19.7.0
+urllib3==1.25.7
 w3lib==1.21.0
 Werkzeug==0.16.0
 zope.interface==4.6.0
