--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,8 @@ __pycache__/
 /build
 /captures
 .externalNativeBuild
-logs
-log
+logs/*.log
+log/*.log
 
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
