--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -2,10 +2,12 @@
 #
 # For more information about the [deploy] section see:
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
-
+[scrapyd]
+bind_address =127.0.0.1
+http_port=6803
 [settings]
 default = RCL.settings
 
 [deploy]
-#url = http://localhost:6800/
-project = RCL
+url =http://127.0.0.1:6803
+project =RCL
