--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,11 @@ __pycache__/
 .externalNativeBuild
 logs/*.log
 log/*.log
-
+.egg
+*.egg-info
+*.build
+logs
+log
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
