--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+APScheduler==3.6.3
 asn1crypto==1.1.0
 attrs==19.2.0
 Automat==0.7.0
@@ -12,16 +13,21 @@ Django==2.2.6
 et-xmlfile==1.0.1
 Faker==2.0.4
 Flask==1.1.1
+Flask-Compress==1.4.0
+Flask-SQLAlchemy==2.4.1
 hyperlink==19.0.0
 idna==2.8
 incremental==17.5.0
 itsdangerous==1.1.0
 jdcal==1.4.1
 Jinja2==2.10.3
+logparser==0.8.2
 lxml==4.4.1
 MarkupSafe==1.1.1
 openpyxl==3.0.0
 parsel==1.5.2
+pexpect==4.7.0
+ptyprocess==0.6.0
 pyasn1==0.4.7
 pyasn1-modules==0.2.7
 pycparser==2.19
@@ -36,12 +42,17 @@ pytz==2019.3
 queuelib==1.5.0
 requests==2.22.0
 Scrapy==1.7.3
+scrapyd==1.2.1
+scrapyd-client==1.1.0
+scrapydweb==1.4.0
+selenium==3.141.0
 service-identity==18.1.0
 six==1.12.0
 SQLAlchemy==1.3.11
 sqlparse==0.3.0
 text-unidecode==1.3
 Twisted==19.7.0
+tzlocal==2.0.0
 urllib3==1.25.7
 w3lib==1.21.0
 Werkzeug==0.16.0
